Got modal with email form set up...some problems with using it on mobile, however.  I'll need to look around for a fix to this issue.

--- a/style.css
+++ b/style.css
@@ -85,6 +85,22 @@ h3 {
 	text-align: justify;
 }
 
+/*For proper alignment of input fields in modal form*/
+.input-group[class*="col-"] {
+	padding-right: 15px;
+	padding-left: 15px;
+}
+
+.popover {
+	background-color: #E74C3C;
+	color: #ECF0F1;
+	width: 120px;
+}
+
+.popover.right .arrow:after {
+	border-right-color: #E74C3C;
+}
+
 nav {
 	
 }
